working on update vendor usecase